--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.pawpal10">
+
     <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,25 +15,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31">
+
         <activity
             android:name=".Register"
             android:theme="@style/Theme.Material3.Light.NoActionBar"
-            android:exported="false" >
+            android:exported="false">
         </activity>
+
         <activity
             android:name=".Login"
             android:theme="@style/Theme.Material3.Light.NoActionBar"
-            android:exported="true"
-            ><intent-filter>
-        <action android:name="android.intent.action.MAIN" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
-        <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.Material3.Light.NoActionBar"
             android:exported="true">
-
         </activity>
+
     </application>
 
 </manifest>
