--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.pawpal10">
@@ -34,6 +33,13 @@
 
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.Material3.Light.NoActionBar"
+            android:exported="true">
+        </activity>
+
+        <!-- Declare PaymentActivity -->
+        <activity
+            android:name=".PaymentActivity"
             android:theme="@style/Theme.Material3.Light.NoActionBar"
             android:exported="true">
         </activity>
